Spec 0020 part B: run training jobs on team workers from the Train tab (#37)
